2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Don't check new disk.

2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Always log if full size estimate is larger
				than the available tape space.

2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Always log if the latest full dump will be
				overwritten soon.

2006-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/clock.c (timesub): Don't make a negative time.

2006-07-27  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Tell which file are loaded.
	* man/xml-source/amanda-client.conf.5.xml: Ditto.

2006-07-26  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: for 2.5.1b2.

2006-07-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.h (CONFTYPE_HOLDING): New conftype.
	* common-src/util.c (conf_init_holding, conf_set_holding,
			     get_conftype_hold): New fonction.
	* example/amanda.conf.in: Example of new holdingdisk value.
	* man/xml-source/amanda.8.xml: Example.
	* man/xml-source/amanda.conf.5.xml: Document it.
	* server-src/amadmin.c (disklist_one): Print holdingdisk value.
	* server-src/conffile.c: Parse new CONF_HOLDING type.
	* server-src/conffile.h (dumptype_get_to_holdingdisk): Change macro.
	* server-src/diskfile.c (parse_diskline): dumptype_get_to_holdingdisk.
	* server-src/driver.c: Use new CONFTYPE_HOLDING value.

2006-07-26  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Fix bug found by coverity.
	* common-src/debug.c: Fix bug found by coverity.

2006-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.c: Typo.

2006-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.c: Correct test for driver_stream.

2006-07-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c: Default CLN_AMANDATES to /etc/amandates.