@@ -1,4 +1,7 @@
 2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/driver.c (find_diskspace): Make sure size > 0.
+
+2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/planner.c: Don't check new disk.
 
 2006-07-28  Jean-Louis Martineau <martineau@zmanda.com>
